src/component/ProjectsPage/FeaturedProjects/style.css
.pp-fp-projects-page-container {
  min-width: 1007px;
  max-width: 98vw;
}

.featured-pp-fp-projects {
  display: flex;
  width: 90vw;
}

.pp-fp-projects-title {
  color: #187dff;
  font-weight: 700;
}

#pp-fp-projects-navbar {
  padding-top: 2%;
}

.pp-fp-projects-text {
  color: #000;
  font-size: 2.5vh;
  margin-top: 5%;
  max-width: 400px;
}

.featured-pp-fp-projects-text {
  margin-left: 4%;
  width: min-content;
  min-width: 396px;
  margin-top: -3%;
}

.pp-fp-projects-back img {
  transform: rotate(180deg);
}

.featured-pp-fp-project-buttons {
  margin-top: 15%;
}

.pp-fp-projects-button {
  background: #ffffff;
  border: 1px solid black;
  width: 90px;
  height: 90px;
  box-shadow: -0.5rem 0.6rem black;
}

.pp-fp-projects-button-2 {
  display: none;
}

.pp-fp-projects-forward {
  margin-right: 40px;
}

.pp-fp-project {
  display: flex;
  margin-top: 10px;
}

.pp-fp-project-text h1 {
  font-family: 'Space Mono 700';
  font-size: 7vh;
}

.pp-fp-project-team {
  font-family: 'Space Mono';
  font-size: 3vh;
  color: #000;
  text-align: left;
  text-transform: none;
  font-weight: 400;
}

.pp-fp-project-text p {
  max-width: 250px;
  font-size: 2vh;
}

.view-pp-fp-project-button {
  color: black;
  background-color: white;
  border: 1px solid #111111;
  box-shadow: -0.5rem 0.6rem;
  font-family: 'Space Mono';
  font-size: 3vh;
  position: relative;
  width: 100px;
  margin-left: 5px;
}

.view-pp-fp-project-button-2 {
  color: black;
  background-color: white;
  border: 1px solid #111111;
  box-shadow: -0.5rem 0.6rem;
  font-family: 'Space Mono';
  font-size: 3vh;
  position: relative;
  width: 100px;
  margin-left: 5px;
}

.pp-fp-projects-mobile {
  display: none;
}

.pp-fp-projects {
  height: 75vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.image-container {
  width: 40vw;
  height: 56vh;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 5px;
}

.pp-fp-image {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.pp-fp-project-text {
  margin-left: 5px;
}

.view-pp-fp-project-div-2 {
  display: none;
  justify-content: center;
}

@media only screen and (max-device-width: 650px) {
  .featured-pp-fp-projects {
    width: unset;
    margin-bottom: 50px;
  }

  .pp-fp-projects-bg {
    background-color: #187dff;
    margin: 0px;
    padding: 0px;
    min-width: 102vw;
    margin-left: -2vh;
    justify-content: center;
    align-items: center;
    display: flex;
    flex-direction: column;
    text-align: left;
    padding-left: 5vw;
    padding-top: 15vh;
    padding-bottom: 5vh;
  }

  .pp-fp-projects-buttons {
    margin-bottom: 10vh;
  }

  .pp-fp-projects-page-container {
    min-width: unset;
    width: unset;
  }

  .pp-fp-projects-forward img {
    transform: rotate(270deg);
  }
  .pp-fp-projects-back img {
    transform: rotate(90deg);
  }

  .featured-pp-fp-projects {
    flex-direction: column;
  }

  .pp-fp-projects {
    height: auto;
  }

  .pp-fp-project {
    flex-direction: column;
    height: auto;
  }

  .featured-pp-fp-projects-text {
    width: unset;
  }

  .pp-fp-projects-text {
    max-width: unset;
    color: white;
  }

  .pp-fp-projects-desktop {
    display: none;
  }

  .pp-fp-projects-mobile {
    display: block;
  }

  .featured-pp-fp-project-buttons {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-right: 4%;
    margin-bottom: 10%;
  }

  .pp-fp-project-team {
    margin-top: -10%;
    width: 33vw;
    height: 10vh;
  }

  .pp-fp-project-text p {
    max-width: unset;
    margin: 5% 10%;
  }

  .view-pp-fp-project-button {
    margin-top: 0;
    margin-bottom: 5%;
  }

  .view-pp-fp-project-button-2 {
    margin-top: 0;
    margin-bottom: 5%;
    display: block;
  }

  .view-pp-fp-project-div {
    display: flex;
    justify-content: center;
  }

  .pp-fp-projects-title {
    font-size: 6vh;
    color: #ffffff;
  }

  .pp-fp-projects-button {
    width: 120px;
    height: 120px;
    display: none;
  }

  .pp-fp-projects-button-2 {
    background: #ffffff;
    border: 1px solid black;
    width: 90px;
    height: 90px;
    box-shadow: -0.5rem 0.6rem black;
    width: 120px;
    height: 120px;
    display: block;
  }

  .pp-fp-navbar-style {
    position: fixed;
    left: 90%;
    transform: translateX(-50%);
    margin-left: 0;
  }

  .image-container {
    width: 100vw;
    height: 25vh;
    object-fit: contain;
  }

  .view-pp-fp-project-button {
    width: -moz-fit-content;
    width: fit-content;
    margin: 0;
    padding: 10px 30px;
    display: none;
  }

  .view-pp-fp-project-button-2 {
    width: -moz-fit-content;
    width: fit-content;
    margin: 0;
    padding: 10px 30px;
  }

  .view-pp-fp-project-div-2 {
    display: flex;
    justify-content: center;
  }
}

